# sessao_zero

./: .pre-commit-config.yaml  .sqlfluff  .tool-versions  README.md  pyproject.toml
src/: app.py  database.db
src/db/: __init__.py  db.md  db.py  db_helper.py
src/db/sql/create_tables/: 2_create_player.sql  3_create_character.sql  3_create_player.sql  4_create_campaign.sql  5_create_session.sql  6_create_note.sql  7_add_fks.sql
src/db/sql/tables/: 1_create_character.sql  2_create_guild.sql  3_create_player.sql  4_create_campaign.sql  5_create_session.sql  6_create_note.sql  create_tables.sql
