[tool.poetry]
name = "sessao-zero"
version = "0.1.0"
description = ""
authors = ["arthurpieri <git@arthurpieri.com>"]
readme = "README.md"
packages = [{include = "sessao_zero"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
pre-commit = "^3.2.2"
pylint = "^2.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
