[tool.poetry]
name = "sessao-zero"
version = "0.1.0"
description = ""
authors = ["arthurpieri <git@arthurpieri.com>"]
readme = "README.md"
packages = [{include = "sessao_zero"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
pre-commit = "^3.2.2"
pylint = "^2.17.2"
sqlfluff = "^2.0.3"

[tool.sqlfluff.core]
templater = "jinja"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"

[tool.sqlfluff.indentation]
indented_joins = true
indented_using_on = true
template_blocks_indent = false

[tool.sqlfluff.templater]
unwrap_wrapped_queries = true

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

# For rule specific configuration, use dots between the names exactly
# as you would in .sqlfluff. In the background, SQLFluff will unpack the
# configuration paths accordingly.
[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
